{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 120,
  "lineage": "01b4e993-5dd1-1356-599c-0fca2c1c88b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f22f6155d6d92c5",
            "arn": "arn:aws:ec2:eu-central-1:517804334742:instance/i-0fa6f28e3e2923f51",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa6f28e3e2923f51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "cats-shop20210713085523766300000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09242cbfe19fb1ab9",
            "private_dns": "ip-10-0-2-161.eu-central-1.compute.internal",
            "private_ip": "10.0.2.161",
            "public_ip": "52.59.68.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05df6b64bde97e299",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012b983d033e158b7",
            "tags": {
              "Name": "cats-shop-1"
            },
            "tags_all": {
              "Name": "cats-shop-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-087b68ebea688fd67"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.template_file.user_data",
            "module.myip.data.http.ip_address",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all",
            "aws_key_pair.server_key",
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:security-group/sg-087b68ebea688fd67",
            "description": "cats-shop instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087b68ebea688fd67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "91.196.54.5/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cats-shop-instance20210713105034312600000001",
            "name_prefix": "cats-shop-instance",
            "owner_id": "517804334742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cf045e7b7102628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myip.data.http.ip_address",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:internet-gateway/igw-082ac213fd9df3c2d",
            "id": "igw-082ac213fd9df3c2d",
            "owner_id": "517804334742",
            "tags": {
              "Name": "cats-shop"
            },
            "tags_all": {
              "Name": "cats-shop"
            },
            "vpc_id": "vpc-01cf045e7b7102628"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:route-table/rtb-0f6c5d4a9224e014b",
            "id": "rtb-0f6c5d4a9224e014b",
            "owner_id": "517804334742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082ac213fd9df3c2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cats-shop-public"
            },
            "tags_all": {
              "Name": "cats-shop-public"
            },
            "vpc_id": "vpc-01cf045e7b7102628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0658977faee13ee3c",
            "route_table_id": "rtb-0f6c5d4a9224e014b",
            "subnet_id": "subnet-07d8bff442ea35f6d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all",
            "module.vpc.aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256f41504c411248",
            "route_table_id": "rtb-0f6c5d4a9224e014b",
            "subnet_id": "subnet-012b983d033e158b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:subnet/subnet-07d8bff442ea35f6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07d8bff442ea35f6d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517804334742",
            "tags": {
              "Name": "cats-shop-public-1"
            },
            "tags_all": {
              "Name": "cats-shop-public-1"
            },
            "vpc_id": "vpc-01cf045e7b7102628"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:subnet/subnet-012b983d033e158b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-012b983d033e158b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517804334742",
            "tags": {
              "Name": "cats-shop-public-1"
            },
            "tags_all": {
              "Name": "cats-shop-public-1"
            },
            "vpc_id": "vpc-01cf045e7b7102628"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.all",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:517804334742:vpc/vpc-01cf045e7b7102628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce21022c8390d04e",
            "default_route_table_id": "rtb-03ccb47497843b0cb",
            "default_security_group_id": "sg-094a1597a3f0a4922",
            "dhcp_options_id": "dopt-e6ccab8c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01cf045e7b7102628",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ccb47497843b0cb",
            "owner_id": "517804334742",
            "tags": {
              "Name": "cats-shop"
            },
            "tags_all": {
              "Name": "cats-shop"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}